--- a/Client/package.json
+++ b/Client/package.json
@@ -29,8 +29,11 @@
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "daisyui": "^5.1.12",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
-    "tailwind": "^2.3.1",
+    "tailwind": "^2.4.1",
+    "tailwindcss": "^4.1.13",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
